WIP - Working on Filestore and grid definition upload.
