# src/main/java/gov/epa/bencloud/server/database/jooq/data/tables/records/FileRecord.java
@@ -1,0 +1,368 @@
+/*
+ * This file is generated by jOOQ.
+ */
+package gov.epa.bencloud.server.database.jooq.data.tables.records;
+
+
+import gov.epa.bencloud.server.database.jooq.data.tables.File;
+
+import java.time.LocalDateTime;
+
+import org.jooq.Field;
+import org.jooq.Record1;
+import org.jooq.Record8;
+import org.jooq.Row8;
+import org.jooq.impl.UpdatableRecordImpl;
+
+
+/**
+ * This class is generated by jOOQ.
+ */
+@SuppressWarnings({ "all", "unchecked", "rawtypes" })
+public class FileRecord extends UpdatableRecordImpl<FileRecord> implements Record8<Integer, String, String, Long, String, String, Short, LocalDateTime> {
+
+    private static final long serialVersionUID = 1L;
+
+    /**
+     * Setter for <code>data.file.id</code>.
+     */
+    public void setId(Integer value) {
+        set(0, value);
+    }
+
+    /**
+     * Getter for <code>data.file.id</code>.
+     */
+    public Integer getId() {
+        return (Integer) get(0);
+    }
+
+    /**
+     * Setter for <code>data.file.filename</code>.
+     */
+    public void setFilename(String value) {
+        set(1, value);
+    }
+
+    /**
+     * Getter for <code>data.file.filename</code>.
+     */
+    public String getFilename() {
+        return (String) get(1);
+    }
+
+    /**
+     * Setter for <code>data.file.file_type</code>.
+     */
+    public void setFileType(String value) {
+        set(2, value);
+    }
+
+    /**
+     * Getter for <code>data.file.file_type</code>.
+     */
+    public String getFileType() {
+        return (String) get(2);
+    }
+
+    /**
+     * Setter for <code>data.file.file_size</code>.
+     */
+    public void setFileSize(Long value) {
+        set(3, value);
+    }
+
+    /**
+     * Getter for <code>data.file.file_size</code>.
+     */
+    public Long getFileSize() {
+        return (Long) get(3);
+    }
+
+    /**
+     * Setter for <code>data.file.metadata</code>.
+     */
+    public void setMetadata(String value) {
+        set(4, value);
+    }
+
+    /**
+     * Getter for <code>data.file.metadata</code>.
+     */
+    public String getMetadata() {
+        return (String) get(4);
+    }
+
+    /**
+     * Setter for <code>data.file.user_id</code>.
+     */
+    public void setUserId(String value) {
+        set(5, value);
+    }
+
+    /**
+     * Getter for <code>data.file.user_id</code>.
+     */
+    public String getUserId() {
+        return (String) get(5);
+    }
+
+    /**
+     * Setter for <code>data.file.share_scope</code>.
+     */
+    public void setShareScope(Short value) {
+        set(6, value);
+    }
+
+    /**
+     * Getter for <code>data.file.share_scope</code>.
+     */
+    public Short getShareScope() {
+        return (Short) get(6);
+    }
+
+    /**
+     * Setter for <code>data.file.created_date</code>.
+     */
+    public void setCreatedDate(LocalDateTime value) {
+        set(7, value);
+    }
+
+    /**
+     * Getter for <code>data.file.created_date</code>.
+     */
+    public LocalDateTime getCreatedDate() {
+        return (LocalDateTime) get(7);
+    }
+
+    // -------------------------------------------------------------------------
+    // Primary key information
+    // -------------------------------------------------------------------------
+
+    @Override
+    public Record1<Integer> key() {
+        return (Record1) super.key();
+    }
+
+    // -------------------------------------------------------------------------
+    // Record8 type implementation
+    // -------------------------------------------------------------------------
+
+    @Override
+    public Row8<Integer, String, String, Long, String, String, Short, LocalDateTime> fieldsRow() {
+        return (Row8) super.fieldsRow();
+    }
+
+    @Override
+    public Row8<Integer, String, String, Long, String, String, Short, LocalDateTime> valuesRow() {
+        return (Row8) super.valuesRow();
+    }
+
+    @Override
+    public Field<Integer> field1() {
+        return File.FILE.ID;
+    }
+
+    @Override
+    public Field<String> field2() {
+        return File.FILE.FILENAME;
+    }
+
+    @Override
+    public Field<String> field3() {
+        return File.FILE.FILE_TYPE;
+    }
+
+    @Override
+    public Field<Long> field4() {
+        return File.FILE.FILE_SIZE;
+    }
+
+    @Override
+    public Field<String> field5() {
+        return File.FILE.METADATA;
+    }
+
+    @Override
+    public Field<String> field6() {
+        return File.FILE.USER_ID;
+    }
+
+    @Override
+    public Field<Short> field7() {
+        return File.FILE.SHARE_SCOPE;
+    }
+
+    @Override
+    public Field<LocalDateTime> field8() {
+        return File.FILE.CREATED_DATE;
+    }
+
+    @Override
+    public Integer component1() {
+        return getId();
+    }
+
+    @Override
+    public String component2() {
+        return getFilename();
+    }
+
+    @Override
+    public String component3() {
+        return getFileType();
+    }
+
+    @Override
+    public Long component4() {
+        return getFileSize();
+    }
+
+    @Override
+    public String component5() {
+        return getMetadata();
+    }
+
+    @Override
+    public String component6() {
+        return getUserId();
+    }
+
+    @Override
+    public Short component7() {
+        return getShareScope();
+    }
+
+    @Override
+    public LocalDateTime component8() {
+        return getCreatedDate();
+    }
+
+    @Override
+    public Integer value1() {
+        return getId();
+    }
+
+    @Override
+    public String value2() {
+        return getFilename();
+    }
+
+    @Override
+    public String value3() {
+        return getFileType();
+    }
+
+    @Override
+    public Long value4() {
+        return getFileSize();
+    }
+
+    @Override
+    public String value5() {
+        return getMetadata();
+    }
+
+    @Override
+    public String value6() {
+        return getUserId();
+    }
+
+    @Override
+    public Short value7() {
+        return getShareScope();
+    }
+
+    @Override
+    public LocalDateTime value8() {
+        return getCreatedDate();
+    }
+
+    @Override
+    public FileRecord value1(Integer value) {
+        setId(value);
+        return this;
+    }
+
+    @Override
+    public FileRecord value2(String value) {
+        setFilename(value);
+        return this;
+    }
+
+    @Override
+    public FileRecord value3(String value) {
+        setFileType(value);
+        return this;
+    }
+
+    @Override
+    public FileRecord value4(Long value) {
+        setFileSize(value);
+        return this;
+    }
+
+    @Override
+    public FileRecord value5(String value) {
+        setMetadata(value);
+        return this;
+    }
+
+    @Override
+    public FileRecord value6(String value) {
+        setUserId(value);
+        return this;
+    }
+
+    @Override
+    public FileRecord value7(Short value) {
+        setShareScope(value);
+        return this;
+    }
+
+    @Override
+    public FileRecord value8(LocalDateTime value) {
+        setCreatedDate(value);
+        return this;
+    }
+
+    @Override
+    public FileRecord values(Integer value1, String value2, String value3, Long value4, String value5, String value6, Short value7, LocalDateTime value8) {
+        value1(value1);
+        value2(value2);
+        value3(value3);
+        value4(value4);
+        value5(value5);
+        value6(value6);
+        value7(value7);
+        value8(value8);
+        return this;
+    }
+
+    // -------------------------------------------------------------------------
+    // Constructors
+    // -------------------------------------------------------------------------
+
+    /**
+     * Create a detached FileRecord
+     */
+    public FileRecord() {
+        super(File.FILE);
+    }
+
+    /**
+     * Create a detached, initialised FileRecord
+     */
+    public FileRecord(Integer id, String filename, String fileType, Long fileSize, String metadata, String userId, Short shareScope, LocalDateTime createdDate) {
+        super(File.FILE);
+
+        setId(id);
+        setFilename(filename);
+        setFileType(fileType);
+        setFileSize(fileSize);
+        setMetadata(metadata);
+        setUserId(userId);
+        setShareScope(shareScope);
+        setCreatedDate(createdDate);
+    }
+}
